EIP-152: Add BLAKE2 Compression Function F Precompile

--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -37,6 +37,7 @@ blockchain = {
             rskip152 = papyrus200
             rskip156 = papyrus200
             rskipUMM = papyrus200
+            rskip153 = iris300
             rskip169 = iris300
             rskip171 = iris300
             rskip172 = iris300
@@ -207,6 +208,9 @@ vm {
     }
 }
 
+# invoke vm program on message received, if the vm is not invoked the balance transfer occurs anyway  [true/false]
+play.vm = true
+
 # Key value data source values: [leveldb]
 keyvalue.datasource = leveldb
 
@@ -376,10 +380,6 @@ scoring {
         # maximum punishment duration (in minutes, default = 1 week)
         maximum: 6000
     }
-    summary = { # logs a report every specific time, as described in PeerScoringStatsReport
-        enabled = true
-        time = 300000 # every five minutes (in milliseconds)
-    }
 }
 
 cache {
@@ -405,17 +405,6 @@ crypto {
     #Possibility to config crypto library implementation to use
     # Possible values:
     # - 'bc' (Bouncy Castle)
-    # - 'native' (Native C lib) 
-    library: 'native'
+    # - 'native' (Native C lib) <- not yet implemented
+    library: 'bc'
 }
-
-system {
-    printInfo = false
-}
-
-blooms {
-    blocks = 64
-    service = false
-    confirmations = 400
-}
-
