--- a/rskj-core/src/main/resources/expected.conf
+++ b/rskj-core/src/main/resources/expected.conf
@@ -46,6 +46,7 @@ blockchain = {
              rskip152 = <hardforkName>
              rskip156 = <hardforkName>
              rskipUMM = <hardforkName>
+             rskip153 = <hardforkName>
              rskip169 = <hardforkName>
              rskip171 = <hardforkName>
              rskip172 = <hardforkName>
@@ -176,6 +177,7 @@ vm = {
         initStorageLimit = <initStorageLimit>
     }
 }
+play.vm = <vm>
 keyvalue.datasource = <datasource>
 sync = {
     enabled = <enabled>
@@ -241,10 +243,6 @@ scoring = {
         maximum = <maximum>
     }
     punishmentEnabled = <bool>
-    summary = {
-        enabled = <bool>
-        time = <number>
-    }
 }
 cache = {
   states = {
@@ -266,11 +264,3 @@ messages.recorder = {
 }
 targetgaslimit = <long>
 forcegaslimit = <bool>
-
-system.printInfo = <bool>
-
-blooms = {
-  blocks = <noblocks>
-  service = <bool>
-  confirmations = <noblocks>
-}
