Create RSKIP 170 activation code

--- a/rskj-core/src/main/resources/expected.conf
+++ b/rskj-core/src/main/resources/expected.conf
@@ -47,6 +47,7 @@ blockchain = {
              rskip156 = <hardforkName>
              rskipUMM = <hardforkName>
              rskip169 = <hardforkName>
+             rskip170 = <hardforkName>
              rskip171 = <hardforkName>
              rskip172 = <hardforkName>
              rskip174 = <hardforkName>
