--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -38,6 +38,7 @@ blockchain = {
             rskip156 = papyrus200
             rskipUMM = papyrus200
             rskip169 = iris300
+            rskip170 = iris300
             rskip171 = iris300
             rskip172 = iris300
             rskip174 = iris300
