WIP - Changes for the index to work

--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -34,13 +34,14 @@ blockchain = {
             rskip146 = papyrus200,
             rskip150 = twoToThree,
             rskip151 = papyrus200,
-            rskip152 = papyrus200
-            rskip156 = papyrus200
-            rskipUMM = papyrus200
-            rskip169 = iris300
-            rskip171 = iris300
-            rskip172 = iris300
-            rskip174 = iris300
+            rskip152 = papyrus200,
+            rskip156 = papyrus200,
+            rskipUMM = papyrus200,
+            rskip169 = iris300,
+            rskip171 = iris300,
+            rskip172 = iris300,
+            rskip174 = iris300,
+            rskip_btc_index = iris300
         }
     }
     gc = {
