--- a/rskj-core/src/main/resources/expected.conf
+++ b/rskj-core/src/main/resources/expected.conf
@@ -52,6 +52,7 @@ blockchain = {
              rskip172 = <hardforkName>
              rskip174 = <hardforkName>
              rskip180 = <hardforkName>
+             rskip181 = <hardforkName>
              rskip191 = <hardforkName>
          }
     }
