--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -43,6 +43,7 @@ blockchain = {
             rskip172 = iris300
             rskip174 = iris300
             rskip180 = iris300
+            rskip181 = iris300
             rskip191 = iris300
         }
     }
