add missing changes after rebase

--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -208,9 +208,6 @@ vm {
     }
 }
 
-# invoke vm program on message received, if the vm is not invoked the balance transfer occurs anyway  [true/false]
-play.vm = true
-
 # Key value data source values: [leveldb]
 keyvalue.datasource = leveldb
 
@@ -380,6 +377,10 @@ scoring {
         # maximum punishment duration (in minutes, default = 1 week)
         maximum: 6000
     }
+    summary = { # logs a report every specific time, as described in PeerScoringStatsReport
+        enabled = true
+        time = 300000 # every five minutes (in milliseconds)
+    }
 }
 
 cache {
@@ -405,6 +406,17 @@ crypto {
     #Possibility to config crypto library implementation to use
     # Possible values:
     # - 'bc' (Bouncy Castle)
-    # - 'native' (Native C lib) <- not yet implemented
-    library: 'bc'
+    # - 'native' (Native C lib)
+    library: 'native'
 }
+
+system {
+    printInfo = false
+}
+
+blooms {
+    blocks = 64
+    service = false
+    confirmations = 400
+}
+
