--- a/rskj-core/src/test/resources/test-rskj.conf
+++ b/rskj-core/src/test/resources/test-rskj.conf
@@ -224,3 +224,9 @@ messages {
         commands: [ "TRANSACTIONS", "RSK_MESSAGE:BLOCK_MESSAGE" ]
     }
 }
+
+blockchain.config {
+    hardforkActivationHeights = {
+        iris300 = 5
+    }
+}
