--- a/rskj-core/src/main/resources/expected.conf
+++ b/rskj-core/src/main/resources/expected.conf
@@ -177,7 +177,6 @@ vm = {
         initStorageLimit = <initStorageLimit>
     }
 }
-play.vm = <vm>
 keyvalue.datasource = <datasource>
 sync = {
     enabled = <enabled>
@@ -243,6 +242,10 @@ scoring = {
         maximum = <maximum>
     }
     punishmentEnabled = <bool>
+    summary = {
+        enabled = <bool>
+        time = <number>
+    }
 }
 cache = {
   states = {
@@ -264,3 +267,11 @@ messages.recorder = {
 }
 targetgaslimit = <long>
 forcegaslimit = <bool>
+
+system.printInfo = <bool>
+
+blooms = {
+  blocks = <noblocks>
+  service = <bool>
+  confirmations = <noblocks>
+}
