--- a/rskj-core/src/main/resources/expected.conf
+++ b/rskj-core/src/main/resources/expected.conf
@@ -52,6 +52,7 @@ blockchain = {
              rskip174 = <hardforkName>
              rskip179 = <hardforkName>
              rskip180 = <hardforkName>
+             rskip186 = <hardforkName>
              rskip191 = <hardforkName>
              rskip197 = <hardforkName>
          }
