--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -43,6 +43,7 @@ blockchain = {
             rskip174 = iris300
             rskip179 = iris300
             rskip180 = iris300
+            rskip186 = iris300
             rskip191 = iris300
             rskip197 = iris300
         }
