--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,6 +153,9 @@ jobs:
             printf "Running mining integration tests. Follow it on:\n\n    %s\n\n" "$build_url"
             sleep 10 # give CircleCI some time to spin up the job
             wait_for_completion "$build_num"
+      - store_test_results:
+          path: test-results
+
 
 workflows:
   # https://circleci.com/docs/2.0/configuration-reference/#version-1
