--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,8 +153,18 @@ jobs:
             printf "Running mining integration tests. Follow it on:\n\n    %s\n\n" "$build_url"
             sleep 10 # give CircleCI some time to spin up the job
             wait_for_completion "$build_num"
-      - store_test_results:
-          path: test-results
+      - run:
+            name: Save test results
+            command: |
+              mkdir -p junit/
+              find build/test-results -type f -name "*.xml" \
+                -exec cp {} junit/ \;
+            when: always
+        - store_test_results:
+            path: junit
+
+        - store_artifacts:
+            path: junit
 
 
 workflows:
