--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,6 +94,7 @@ jobs:
       - run:
         name: Save test results
         command: "mkdir -p junit/"
+        when: always
       - run:
           name: Setup
           command: apk add --no-cache curl jq
