--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,10 +153,21 @@ jobs:
             printf "Running mining integration tests. Follow it on:\n\n    %s\n\n" "$build_url"
             sleep 10 # give CircleCI some time to spin up the job
             wait_for_completion "$build_num"
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p junit/
+            find build/test-results -type f -name "*.xml" \
+              -exec cp {} junit/ \;
+          when: always
       - store_test_results:
-          path: /tmp
+          path: /junit
       - store_artifacts:
-          path: /tmp
+          path: /junit
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
 
 
 workflows:
