Comment suggested config for Full Sync

--- a/rskj-core/src/main/resources/config/testnet.conf
+++ b/rskj-core/src/main/resources/config/testnet.conf
@@ -72,9 +72,10 @@ wallet {
     accounts = []
 }
 
-cache {
-    btcBlockStore {
-        depth: 15000,
-        size: 20000
-    }
-}
+#This is a suggested configuration for Full Sync in testnet, for block range 900k-1100k.
+#cache {
+#    btcBlockStore {
+#        depth: 10000,
+#        size: 20000
+#    }
+#}
